--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     @media (max-width: 1250px) {
       .pricing-container{
         flex-direction: column;
-        height: 100%;
+        height: 100vh;
 
       }
       
